--- a/LowCodeLLM/src/index.html
+++ b/LowCodeLLM/src/index.html
@@ -105,7 +105,7 @@
           <div id="mountNodeLoading">loading...</div>
         </div>
         <button id="regenerate" onclick="promptConfirm()">Regenerate</button>
-        <!-- <button id="workflow-Confirm" onclick="workflowConfirm()">Confirm</button> -->
+        <button id="workflow-Confirm" onclick="workflowConfirm()">Confirm</button> 
       </div>
       <div id="right">
         <div id="dia-container">
